[package]
name = "WinBlink"
version = "0.1.0"
edition = "2021"

[dependencies]
global-hotkey = "0.6"
winit = "0.30"
egui = "0.29"
egui-winit = "0.29"
egui_glow = "0.29"
anyhow = "1.0"
thiserror = "1.0"
everywhere = "0.1"
lnk = "0.6"
glutin = "0.32"
glow = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

